K3S & K8S/N8N (UI & worker)/00.helper.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pv-helper
  namespace: emr-cloud
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
    volumeMounts:
    - name: pv
      mountPath: /var/lib/postgresql/data
  volumes:
  - name: pv
    persistentVolumeClaim:
      claimName: quick-postgres-pvc
