K3S & K8S/N8N (UI & worker)/3.n8n-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-worker
  namespace: emr-cloud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: n8n-worker
  template:
    metadata:
      labels:
        app: n8n-worker
    spec:
      containers:
        - name: n8n-worker
          image: man2001thcs/n8n-db-tool:20251015
          command: ["n8n", "worker"]
