K3S & K8S/N8N (UI & worker)/2.n8n-main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-main
  namespace: emr-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n-main
  template:
    metadata:
      labels:
        app: n8n-main
    spec:
      containers:
        - name: n8n-main
          image: man2001thcs/n8n-db-tool:20251015
---

apiVersion: v1
kind: Service
metadata:
  name: n8n-main-service
  namespace: emr-cloud
spec:
  selector:
    app: n8n-main
  ports:
    - port: 5678
      targetPort: 5678
