K3S & K8S/N8N (UI & worker)/4.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-main-ingress
  namespace: emr-cloud
  # annotations:
  #   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  #   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - n8n.local
  rules:
  - host: n8n.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: n8n-main-service
            port: 
              number: 5678
